# jlink_rtt-cmake

./: .cmake-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: on_push.yml
examples/: CMakeLists.txt  Main_RTT_InputEchoApp.c  Main_RTT_InputEchoAppStdio.c  Main_RTT_MenuApp.c  Main_RTT_PrintfTest.c  Main_RTT_SpeedTestApp.c  critical_section_stub.c
src/: CMakeLists.txt
src/Examples/: Main_RTT_InputEchoApp.c  Main_RTT_InputEchoAppStdio.c  Main_RTT_MenuApp.c  Main_RTT_PrintfTest.c
src/RTT/: SEGGER_RTT.h
src/SEGGER_RTT_V768c/Config/: SEGGER_RTT_Conf.h
src/SEGGER_RTT_V768c/RTT/: SEGGER_RTT.c  SEGGER_RTT_printf.c
src/SEGGER_RTT_V768c/Syscalls/: SEGGER_RTT_Syscalls_GCC.c  SEGGER_RTT_Syscalls_IAR.c  SEGGER_RTT_Syscalls_KEIL.c  SEGGER_RTT_Syscalls_SES.c
tests/: CMakeLists.txt
tests/segger_examples/: CMakeLists.txt  startup_stm32l476xx.s
